added buttons for shows & search show form

--- a/index.html
+++ b/index.html
@@ -19,8 +19,31 @@
 </head>
 
 <body>
-    
-    <script src="assets/javascript/app.js"></script>
+    <div class="jumbotron">
+        <h1 class=" favorites display-4">My Favorite Shows!</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <!--Buttons for Diff TV Shows-->
+            <div class="col-sm-8">
+                <div id="tvshow-buttons"></div>
+                <div class="col-sm-4">
+                    <!--Search a Show-->
+                    <form id="form">
+                        <label for="show-input">Add a Show</label><br />
+                        <input type="text" id="shows-input" />
+                        <input id="add-show" type="submit" value="Submit">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <div id="tvshows"></div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+
+
+        <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
