--- a/index.html
+++ b/index.html
@@ -11,39 +11,34 @@
     <!-- My Style Sheet Link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <!--jQuery Link-->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <title>GifTastic</title>
 </head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class=" favorites display-4">My Favorite Shows!</h1>
-    </div>
     <div class="container">
-        <div class="row">
-            <!--Buttons for Diff TV Shows-->
-            <div class="col-sm-8">
-                <div id="tvshow-buttons"></div>
-                <div class="col-sm-4">
-                    <!--Search a Show-->
-                    <form id="form">
-                        <label for="show-input">Add a Show</label><br />
-                        <input type="text" id="shows-input" />
-                        <input id="add-show" type="submit" value="Submit">
-                        <div class="row">
-                            <div class="col-sm-8">
-                                <div id="tvshows"></div>
-                            </div>
-                        </div>
-                </div>
-            </div>
+        <h1>Fantasy Shows</h1>
+
+        
+        <div id="buttons-view"></div>
+        
+        <!--Input Shows-->
+        <form id="animal-form">
+            <label for="animal-input">Add an Animal</label>
+            <input type="text" id="animal-input"><br>
+
+            <!--Add Show Button -->
+            <button id="add-animal">Submit</button>
+        </form>
+
+
+        <div id="gifs-appear-here">
         </div>
 
-
-        <script src="assets/javascript/app.js"></script>
+ <!--jQ Link-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
+<!--JS Link-->
+<script src="assets/js/app.js"></script>
 </body>
 
 </html>
