--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    
     <!-- My Style Sheet Link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -56,4 +57,14 @@
     <script src="assets/js/app.js"></script>
 </body>
 
+<footer id="footer">
+       <p class="copyright text-center">
+                    © 2020 AshtinB, All Rights Reserved.
+                </p>
+
+            </div>
+
+        </div><!-- .row -->
+    </div><!-- .container -->
+</footer>
 </html>
